--- a/src/app/dashboard/styles/layout.css
+++ b/src/app/dashboard/styles/layout.css
@@ -5,43 +5,22 @@
 }
 
 .__main_dashboard {
+    position: relative;
     width: 100%;
-    height: calc(100% - 140px);
+    height: calc(100% - 80px);
     overflow-y: auto;
 }
 
-.__tabs {
-    width: 100%;
+.__main_dashboard .__btn_float {
+    position: fixed;
+    display: grid;
+    right: 20px;
+    bottom: 20px;
+    width: 60px;
     height: 60px;
-    padding: 0rem 1rem;
-    background-color: var(--color-white);
-    border-top: 1px solid var(--color-secondary);
-}
-
-.__tabs .__tabs_items {
-    width: 100%;
-    display: flex;
-    height: inherit;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.__tabs .__tabs_items .__tab a {
-    display: inline-block;
-    padding: .6rem 1.8rem;
+    place-items: center;
+    place-items: center;
     border-radius: 100px;
-    transition: ease-in-out .3s all;
-}
-
-.__tabs .__tabs_items .__tab a .tabler-icon {
-    stroke: var(--color-gray);
-}
-
-.__tabs .__tabs_items .__tab_active a {
-    transition: ease-in-out .3s all;
-    background-color: rgb(249, 0, 80, .2);
-}
-
-.__tabs .__tabs_items .__tab_active a .tabler-icon {
-    stroke: var(--color-primary);
+    color: var(--color-white);
+    background-color: var(--color-primary);
 }
