--- a/src/layout/styles/header.css
+++ b/src/layout/styles/header.css
@@ -1,9 +1,18 @@
-.__header_app {
+.__header {
     width: 100%;
     height: 80px;
     display: flex;
     padding: 0rem 1rem;
     align-items: center;
+    justify-content: space-between;
     background-color: var(--color-white);
     border-bottom: 1px solid var(--color-secondary);
+}
+
+.__header .__link_avatar {
+    display: block;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 100px;
 }
