--- a/src/app/dashboard/styles/new.css
+++ b/src/app/dashboard/styles/new.css
@@ -80,3 +80,40 @@
     border-radius: 10px;
     background-color: var(--color-secondary);
 }
+
+
+.__overlay {
+    position: fixed;
+    top: 100dvh;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    transition: .3s ease all;
+    background-color: rgba(44, 44, 44, .2);
+}
+
+.__overlay--active {
+    top: 0;
+    transition: .3s ease all;
+}
+
+.__overlay .__modal_bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 10px 10px 0 0;
+    background-color: var(--color-white);
+}
+
+.__overlay .__modal_bottom h3 {
+    text-align: center;
+    margin: 1rem 0rem;
+}
+
+.__overlay .__modal_bottom .__btn {
+    width: 100%;
+    height: 60px;
+    border-radius: 10px;
+}
