--- a/src/app/dashboard/styles/new.css
+++ b/src/app/dashboard/styles/new.css
@@ -5,12 +5,26 @@
     gap: 1rem;
     padding: 0rem 1rem;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     background-color: var(--color-white);
     border-bottom: 1px solid var(--color-secondary);
 }
 
-.__header_new .__btn_back {
+.__header_new .__col {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.__header_new .__col .__btn_back {
+    display: grid;
+    width: 40px;
+    height: 40px;
+    place-items: center;
+    border-radius: 100px;
+}
+
+.__header_new .__btn_delete {
     display: grid;
     width: 40px;
     height: 40px;
@@ -72,6 +86,18 @@
     height: 100%;
 }
 
+.__main_new .__form .__form_group .__form_control .__btn_edit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: grid;
+    width: 60px;
+    height: 60px;
+    background: none;
+    place-items: center;
+    border-radius: 10px;
+}
+
 .__main_new .__form .__form_group .__form_control .__form_entry_box {
     width: 100%;
     padding: 1rem;
@@ -81,39 +107,6 @@
     background-color: var(--color-secondary);
 }
 
-
-.__overlay {
-    position: fixed;
-    top: 100dvh;
-    left: 0;
-    width: 100dvw;
-    height: 100dvh;
-    transition: .3s ease all;
-    background-color: rgba(44, 44, 44, .2);
-}
-
-.__overlay--active {
-    top: 0;
-    transition: .3s ease all;
-}
-
-.__overlay .__modal_bottom {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding: 1rem;
-    border-radius: 10px 10px 0 0;
-    background-color: var(--color-white);
-}
-
-.__overlay .__modal_bottom h3 {
-    text-align: center;
-    margin: 1rem 0rem;
-}
-
-.__overlay .__modal_bottom .__btn {
-    width: 100%;
-    height: 60px;
-    border-radius: 10px;
+.__main_new .__form .__form_group .__form_control--edit .__form_entry_box {
+    padding-right: 60px;
 }
