--- a/src/app/dashboard/styles/profile.css
+++ b/src/app/dashboard/styles/profile.css
@@ -62,6 +62,26 @@
     box-shadow: 0px 0px 4px 0px rgba(44, 44, 44, .2);
 }
 
+.__section_photo .__photo .__upload .__load {
+    width: 28px;
+    height: 28px;
+    border: 2px solid var(--color-dark);
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+} 
+
 .__main_profile .__section_group {
     padding: 1rem;
     margin-bottom: 1rem;
@@ -71,6 +91,58 @@
 
 .__main_profile .__section_group h3 {
     margin-bottom: 1rem;
+}
+
+.__main_profile .__section_group .__form_edit_group {
+    width: 100%;
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px 0 0 10px;
+    background-color: #F1F5F0;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control_box {
+    height: 120px;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control input,
+.__main_profile .__section_group .__form_edit_group .__form_edit_control select {
+    width: 100%;
+    height: inherit;
+    background: none;
+    padding: 0rem 1rem;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control textarea {
+    width: 100%;
+    resize: none;
+    padding: 1rem;
+    height: inherit;
+    background: none;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control_btn--row {
+    width: 50px;
+    display: flex;
+    height: inherit;
+    align-items: flex-end;
+    background-color: #F1F5F0;
+    border-radius: 0 10px 10px 0;
+}
+
+.__main_profile .__section_group .__form_edit_group .__form_edit_control_btn .__btn_edit {
+    display: grid;
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    place-items: center;
+    background-color: #F1F5F0;
+    border-radius: 0 10px 10px 0;
 }
 
 .__main_profile .__section_group ul {
